--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts"
+  }, 
   "devDependencies": {
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
